--- a/package.json
+++ b/package.json
@@ -17,23 +17,23 @@
   "dependencies": {
     "@portabletext/react": "3.0.11",
     "@sanity/client": "6.12.3",
-    "@sanity/image-url": "1.0.2",
+    "@sanity/image-url": "^1.0.2",
     "@sanity/preview-url-secret": "1.6.1",
-    "@sanity/vision": "3.28.0",
+    "@sanity/vision": "^3.28.0",
     "@sanity/visual-editing": "1.2.0",
     "@vercel/og": "0.6.2",
     "classnames": "2.5.1",
     "date-fns": "2.30.0",
     "intl-segmenter-polyfill": "0.4.4",
     "next": "14.1.0",
-    "next-sanity": "7.1.1",
+    "next-sanity": "^7.1.1",
     "next-sanity-image": "6.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sanity": "3.28.0",
+    "sanity": "^3.28.0",
     "sanity-plugin-asset-source-unsplash": "1.1.2",
     "sanity-plugin-iframe-pane": "3.1.3",
-    "styled-components": "6.1.8",
+    "styled-components": "^6.1.8",
     "swr": "2.2.4"
   },
   "devDependencies": {
